# rag-techniques

./: .gitignore  AGENTS.md  Budget.md  CLAUDE.md  Guardrails.md  Project Idea.md  README.md  db_schema_example.jsonc  skills-lock.json  todo.md
artifacts/: Proposal_v1.0.0.docx  prompt.md  ~$oposal_v1.0.0.docx
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
monitor/: index.html  profile.json  usage.md
openwiki/: .last-update.json  benchmark-design.md  quickstart.md  system-architecture.md  working-in-this-repo.md
project/: .env.example  .gitignore  config.py  database_manager.py  groq_client.py  groq_limits.md  loop_template.py  parsing_audit_report.md  pyproject.toml
project/data/: filings_manifest.json
project/ingest/: fetch_filings.py  node_builder.py  parse_filing.py  parsing_audit.py  run_ingestion.py
project/pipelines/structural/: build_summary_index.py  node_convert.py
project/tests/: test_build_summary_index.py  test_config.py  test_database_manager.py  test_fetch_filings.py  test_filings_manifest.py  test_groq_client_backoff.py  test_loop_template.py  test_node_builder.py  test_node_convert.py  test_parse_filing.py  test_parsing_audit.py  test_run_ingestion.py
reports/: PLAGIARISM_CHECK_REPORT.md  PROPOSAL_GRADING_REPORT.md
specs/: Architecture.md  Budget.md  Guardrails.md  Phase Plan.md
temp/: deferred.md  directory-structure.md  implementation-guide.html  ingestion-corpus-sample-reference.md  notes.md  phase1-human-actions.md  phase2-human-actions.md  todo.md  (+1 more)
(+65 files in other folders)
