[project]
name = "rag-techniques-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "groq>=1.5.0",
    "llama-parse>=0.6.94",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.rag-benchmark]
# Resolved Phase 1 versions (recorded 2026-07-21, uv pip list):
# groq==1.5.0
# tenacity==9.1.4
# aiosqlite==0.22.1
# python-dotenv==1.2.2
notes = "See resources/specs/Architecture.md §10 for the full manifest; re-verify LlamaIndex pins at Phase 2/5 time."
